# backend_python

fastapi_backend/: alembic.ini  clean_alembic.py  docker-compose.yml  pyproject.toml
fastapi_backend/alembic/: env.py
fastapi_backend/alembic/versions/: 08ea97bd8b9a_init.py  4672af3b098d_initial_tables.py  cbe7e289674e_message.py  fbacd9443588_initial_tables.py
fastapi_backend/app/: backend_pre_start.py  crud.py  main.py  models.py  utils.py
fastapi_backend/app/adapters/: password_hasher_pwdlib.py  user_repository_sqlmodel.py
fastapi_backend/app/api/: api.py  deps.py
fastapi_backend/app/api/routes/: items.py  login.py  users.py  utils.py
fastapi_backend/app/core/: config.py  db.py  security.py
fastapi_backend/app/ports/: password_hasher.py  user_repository.py
fastapi_backend/app/services/: user_service.py
fastapi_backend/test/: conftest.py
fastapi_backend/test/api/: test_items.py  test_login.py
fastapi_backend/test/scripts/: test_the_test_pre_start.py
fastapi_backend/test/utils/: user.py  user_for_test.py  utils.py
fastapi_frontend/: eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  vite.config.ts
fastapi_poi_market_projet/fastapi_market_data_api/: .gitignore  main.py  pyproject.toml
fastapi_poi_market_projet/fastapi_market_data_api/app/api/endpoints/: prices.py
fastapi_poi_market_projet/fastapi_market_data_api/app/core/: auth.py  config.py
fastapi_poi_market_projet/fastapi_market_data_api/app/db/: session.py
fastapi_poi_market_projet/fastapi_market_data_api/app/schemas/: market_data.py
fastapi_poi_market_projet/fastapi_market_data_api/app/services/: market_data.py
scripts/: generate-client.sh
(+17 files in other folders)
