[project]
name = "fastapi-backend"
version = "0.1.0"
description = "a fastapi backend project"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.129.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.0",
    "sentry-sdk>=2.53.0",
    "starlette>=0.52.1",
    "uvicorn>=0.41.0",
]
