[project]
name = "fastapi-backend"
version = "0.1.0"
description = "a fastapi backend project"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "bcrypt>=5.0.0",
    "emails>=0.6",
    "fastapi[standard]>=0.129.0",
    "jinja2>=3.1.6",
    "psycopg[binary]>=3.3.3",
    "pwdlib[argon2]>=0.3.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.0",
    "pyjwt>=2.11.0",
    "sentry-sdk>=2.53.0",
    "sqlmodel>=0.0.34",
    "starlette>=0.52.1",
    "uvicorn>=0.41.0",
]
