[project]
name = "fastapi-market-data-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.135.1",
    "uvicorn[standard]>=0.42.0",
    "alembic>=1.18.4",
    "bcrypt>=5.0.0",
    "emails>=0.6",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "pgcli>=4.4.0",
    "psycopg[binary]>=3.3.3",
    "pwdlib[argon2]>=0.3.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.0",
    "pyjwt>=2.11.0",
    "pytest>=9.0.2",
    "sentry-sdk>=2.53.0",
    "sqlmodel>=0.0.34",
    "starlette>=0.52.1",
    "tenacity>=9.1.4",
    "prometheus-client>=0.24.1",
]
